Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82060

QtWebEngine asserts on css-tricks.com

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.14.2, 5.15
    • 5.14, 5.15
    • WebEngine
    • None
    • Linux/X11
    • 77-based: 432e1a9b1a0fc3be1035adde2d36aff573679c86 79-based: a0781dc499809c340761721591a7bca78009d189, a432b4824 (134-based-refactor)

      Steps to reproduce:

      Assert with 77-based:

      [1:1:0212/134405.286656:FATAL:ng_inline_node.cc(1300)] Check failed: **max_size_out == ComputeContentSize(node, container_writing_mode, input, NGLineBreakerMode::kMaxContent, max_size_cache, nullptr) ("2580.7" vs. "2575.14")0x67db16266d0:LayoutNGBlockFlow	P
      

      Assert with 79-based:

      [11641:1:0212/134919.931613:FATAL:ng_inline_node.cc(1750)] Check failed: (*max_size_out)->Round() == content_size.Round() (2581 vs. 2575)0x292340e26d10:LayoutNGBlockFlow       P
      

      I can only reproduce this on Linux.

      Similar issues are reported for Chromium too (eg. https://bugs.chromium.org/p/chromium/issues/detail?id=1006849 ). They are usually closed as WontFix because the negligible difference between values. We should probably just suppress this assert because it is easily reproducible with WebEngine.

        For Gerrit Dashboard: QTBUG-82060
        # Subject Branch Project Status CR V

            qt_webengine_team Qt WebEngine Team
            pvarga Peter Varga
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes