Suppress DCHECK triggered by NGInlineNode::ComputeMinMaxSize

Task-number: QTBUG-82060
Change-Id: I59cd70e179d8e44d214c37e7a1dcf026ca0e65a1
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>